# Booking-FastAPI

./: .dev.env_example  .dockerignore  .env_example  .env_example.prod  .env_example.test  .gitignore  .prod.env_example  .test.env_example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  nginx.conf  pyproject.toml
docker/: Dockerfile.celery  app.sh  celery.sh  nginx.conf  postgres_waiting.sh
src/: app.py  base_dao.py  database.py  exceptions.py  logger.py  main.py  main_test.py  settings.py  temp.sql
src/admin/: __init__.py  admin.py  auth.py  views.py
src/alembic/: env.py
src/alembic/versions/: 2024_01_12_2153-b8ded08d229f_initial_migration.py
src/api/: __init__.py
src/api/bookings/: router.py
src/api/hotels/: router.py  schemas.py
src/api/rooms/: router.py
src/api/users/: auth.py  dependencies.py  router.py
src/bookings/: dao.py  models.py  router.py
src/dao/: __init__.py  base.py  base_dao.py  bookings_dao.py  hotels_dao.py  rooms_dao.py  users_dao.py
src/db/: __init__.py  base.py  engine.py  initial_data.sql
src/db/models/: __init__.py  bookings.py  hotels.py  rooms.py  users.py
src/entities/bookings/: dao.py  router.py  schemas.py
src/entities/hotels/: dao.py  router.py
src/entities/rooms/: dao.py  router.py  schemas.py
src/entities/users/: auth.py  dao.py  dependencies.py  router.py  schemas.py
src/hotels/: models.py
src/migrations/: env.py
src/migrations/versions/: 2023_10_27_0252-c9fde97e01a5_initial_migration.py
src/rooms/: models.py
src/tasks/: __init__.py  celery.py  email_templates.py  tasks.py
src/users/: auth.py  dao.py  dependencies.py  models.py  router.py
tests/: conftest.py
tests/integration_tests/test_bookings/: test_api.py  test_dao.py
tests/integration_tests/test_users/: test_api.py
tests/unit_tests/: test_dao.py
tests/unit_tests/test_users/: test_dao.py
