[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Bllagden", email = "bllagden99@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.104.0",
    "sqlalchemy>=2.0.22",
    "alembic>=1.12.0",
    "asyncpg>=0.28.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "fastapi-cache2[redis]>=0.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.5",
    "black>=23.11.0",
    "isort>=5.12.0",
    "pytest>=7.4.3",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm.scripts]
local = "uvicorn src.main:app --reload"