[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Bllagden", email = "bllagden99@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi[uvicorn]>=0.108.0",
    "uvicorn>=0.25.0",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "fastapi-cache2[redis]>=0.2.1",
    "sqladmin>=0.16.0",
    "itsdangerous>=2.1.2",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.5",
    "black>=23.11.0",
    "isort>=5.12.0",
    "pytest>=7.4.3",
    "pytest-dotenv>=0.5.2",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
env_files = [
    ".test.env",
]

[tool.pdm.scripts]
loc = "main.py"